k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/app-server-network: "true"
        io.kompose.service: mysql
    spec:
      containers:
        - args:
            - mysqld
            - --character-set-server=utf8
          image: mysql:5.7
          name: mydb
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: my-db
      restartPolicy: Always
      volumes:
        - name: my-db
          persistentVolumeClaim:
            claimName: my-db
status: {}
