k8s/app-server-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: app-server-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/app-server-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/app-server-network: "true"
